# minivllm

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DESIGN.md  ROADMAP.md
minivllm/: __init__.py  batched_cache.py  benchmark.py  cache.py  config.py  constraints.py  dashboard.html  engine.py  generate.py  kernels.py  layers.py  loader.py  model.py  openai_api.py  paged_batched_cache.py  paged_cache.py  prefix_cache.py  quantization.py  server.py  speculative.py  validation.py
notebooks/: minivllm_colab.ipynb
scripts/: batch_bench.py  bench_all.py  benchmark.py  constrained_demo.py  generate.py  kernel_bench.py  loadtest.py  openai_client_demo.py  paged_demo.py  plot_results.py  prefix_demo.py  quant_demo.py  serve_mem_demo.py  spec_bench.py  validate_logits.py
tests/: conftest.py  test_constraints.py  test_continuous_batching.py  test_generation.py  test_kernels.py  test_kv_cache.py  test_logits.py  test_openai.py  test_paged_batched.py  test_paged_cache.py  test_prefix_cache.py  test_quantization.py  test_server.py  test_speculative.py
