[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "minivllm"
version = "0.2.0"
description = "A from-scratch high-performance LLM inference engine (mini-vLLM)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vineet Sista", email = "vineet.sista@gmail.com" }]
keywords = ["llm", "inference", "transformer", "kv-cache", "paged-attention", "vllm", "qwen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "torch>=2.2,<3.0",
    "transformers>=4.51",
    "tokenizers>=0.20",
    "safetensors>=0.4",
    "huggingface-hub>=0.24",
    "accelerate>=0.30",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
plot = ["matplotlib>=3.7"]
demo = ["openai>=1.0"]  # scripts/openai_client_demo.py (drop-in SDK proof)
gpu = ["triton>=2.2"]  # Phase 6 custom kernel; CUDA only

[project.urls]
Homepage = "https://github.com/vineetsista/minivllm"
Repository = "https://github.com/vineetsista/minivllm"

[tool.setuptools]
packages = ["minivllm"]

[tool.setuptools.package-data]
minivllm = ["dashboard.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: downloads Qwen3-0.6B and calls the HuggingFace reference (use --runslow)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks"]  # shell-magic cells, not Python to lint

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = [
    "B008",  # FastAPI uses callables in argument defaults (Depends/etc.)
    "SIM105",  # contextlib.suppress is not always clearer than try/except/pass
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]  # tests import lazily and use fixtures

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # torch/transformers ship partial stubs
warn_unused_ignores = false
check_untyped_defs = false
disable_error_code = ["annotation-unchecked"]

[tool.coverage.run]
source = ["minivllm"]
omit = ["minivllm/server.py"]  # exercised via the live server / load test, not unit cov

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
